Gradient issue on Safari

--- a/resources/assets/admin/sass/animations.scss
+++ b/resources/assets/admin/sass/animations.scss
@@ -1,20 +1,10 @@
 // Skeleton loading
-@-webkit-keyframes skeleton-bone {
-  from {
-    transform: translateX(-100%)
-  }
-
-  to {
-    transform: translateX(100%)
-  }
-}
-
 @keyframes skeleton-bone {
   from {
-    transform: translateX(-100%)
+    left: -100%;
   }
 
   to {
-    transform: translateX(100%)
+    left: 100%;
   }
 }
