--- a/resources/assets/admin/sass/app.scss
+++ b/resources/assets/admin/sass/app.scss
@@ -104,11 +104,10 @@ input[type="date" ] {
   }
 
   &:after {
-    @apply absolute h-full inset-0 transform z-10 bg-gradient-to-r from-transparent via-gray-300 to-transparent;
+    @apply absolute h-full inset-y-0 left-0 w-full z-10 bg-gradient-to-r from-gray-200 via-gray-250 to-gray-200 rounded-md;
 
     content: '';
     animation: skeleton-bone 1s infinite;
-    transform: translateX(-100%);
   }
 }
 
